external-dns works

--- a/external-dns/Makefile
+++ b/external-dns/Makefile
@@ -1,6 +1,12 @@
 METALLB_VERSION ?= v0.9.3
 
-all:
+all: creds
 
-apply:
+creds: partials/CF_API_EMAIL partials/CF_API_KEY partials/DOMAIN
+
+partials/CF_API_EMAIL partials/CF_API_KEY partials/DOMAIN:
+	echo "$@ is missing!"
+	exit 1
+
+apply: creds
 	kubectl apply -k .
