--- a/external-dns/deployment.yaml
+++ b/external-dns/deployment.yaml
@@ -16,7 +16,9 @@ spec:
       serviceAccountName: external-dns
       containers:
       - name: external-dns
-        image: registry.opensource.zalan.do/teapot/external-dns:v0.7.1
+        image: nazarewk/external-dns-arm64:v0.7.1
+        imagePullPolicy: Always
+
         args:
         - --source=ingress
         - --domain-filter=$(DOMAIN)
