--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external-dns/external-dns-arm64"]
 	path = external-dns/external-dns-arm64
 	url = git@github.com:nazarewk-iac/external-dns-arm64.git
+[submodule "vault/build-vault-k8s-arm64"]
+	path = vault/build-vault-k8s-arm64
+	url = git@github.com:nazarewk-iac/build-vault-k8s-arm64.git
