--- a/rook/block-storage/resilient.yaml
+++ b/rook/block-storage/resilient.yaml
@@ -1,16 +1,26 @@
+apiVersion: ceph.rook.io/v1
+kind: CephBlockPool
+metadata:
+  name: resilient
+spec:
+  failureDomain: host
+  replicated:
+    size: 3
+    requireSafeReplicaSize: true
+
+---
+
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: rook-ceph-block
-  annotations:
-    "storageclass.kubernetes.io/is-default-class": "true"
+  name: rook-resilient
 # Change "rook-ceph" provisioner prefix to match the operator namespace if needed
 provisioner: rook-ceph.rbd.csi.ceph.com
 parameters:
   # clusterID is the namespace where the rook cluster is running
   clusterID: rook-ceph
   # Ceph pool into which the RBD image shall be created
-  pool: replicapool
+  pool: resilient
 
   # RBD image format. Defaults to "2".
   imageFormat: "2"
@@ -30,3 +40,4 @@ parameters:
 
 # Delete the rbd volume when a PVC is deleted
 reclaimPolicy: Delete
+allowVolumeExpansion: true
