--- a/vault/values.yaml
+++ b/vault/values.yaml
@@ -6,6 +6,7 @@ server:
     tag: 1.4.2
 
   ha:
+    replicas: 2
     enabled: true
     raft:
       enabled: true
@@ -14,7 +15,8 @@ server:
     enabled: true
 
   dataStorage:
-    storageClass: rook-resilient
+    size: 1Gi
+    storageClass: cstor-replicated-2
 
   ingress:
     enabled: true
