--- a/vault/kustomization.yaml
+++ b/vault/kustomization.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: rook-ceph
+namespace: vault-system
 
 commonLabels:
-  app: rook-ceph
-  component: toolbox
+  app: vault
 
 resources:
-- deployment.yaml
+- namespace.yaml
+- manifests.yaml
